--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,14 @@
         android:theme="@style/Theme.Minimundi">
         <activity
             android:name=".MainActivity"
+            android:parentActivityName=".ListagemActivity"
             android:exported="true" />
         <activity
             android:name=".PrincipalActivity"
             android:exported="true" />
         <activity
             android:name=".AutoriaActivity"
+            android:parentActivityName=".ListagemActivity"
             android:exported="true" />
         <activity android:name=".ListagemActivity">
             <intent-filter>
